<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">检测</string>
    <string name="action_settings">Settings</string>

    <!-- 蓝牙部分 -->
    <string name="search_device">搜索蓝牙</string>
    <string name="scan_display">扫描显示</string>
    <string name="title_activity_device_scan">扫描蓝牙设备</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_scan">开始扫描</string>
    <string name="menu_stop">停止扫描</string>
    <string name="unknown_device">unknown_device</string>
    <string name="title_activity_scan_display">扫描显示</string>
    <string name="menu_connect">连接设备</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_connecting">连接...</string>

    <!-- 显示部分 -->
    <string name="param_config">参数配置</string>
    <string name="startScan">开始</string>
    <string name="stopScan">停止</string>
    <string name="clearTest">清除</string>

    <!-- 参数设置部分 -->
    <string name="start_frq_tv">起始频率:</string>
    <string name="start_frq_unit">kHz</string>
    <string name="end_frq_tv">终止频率:</string>
    <string name="end_frq_unit">kHz</string>
    <string name="frq_interval_tv">步进频率:</string>
    <string name="frq_interval_unit">Hz</string>
    <string name="frq_time_tv">步进间隔:</string>
    <string name="frq_time_unit">*5mS</string>
    <string name="dianping_tv">直流电平:</string>
    <string name="dianping_unit">V</string>
    <string name="enlarge_tv">程控放大:</string>
    <string name="enlarge_unit">mA</string>
    <string name="times_tv">扫描次数:</string>
    <string name="times_init">次</string>
    <string name="interval_time_tv">多次间隔:</string>
    <string name="interval_time_unit">*5mS</string>
    <string name="confirm_set">确 定</string>
    <string name="cancel_set">取 消</string>
	<string name="test_times_tv">测试次数:</string>
    <string-array name="result_operation">
        <item>保存记录</item>
        <item>删除记录</item>
        <item>查看记录</item>
    </string-array>


</resources>
