<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
<!-- 参数配置 -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#828790"
        android:textColor="#fff"
        android:text="频率扫描参数设置"
        android:textSize="20sp"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/start_frq_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/start_frq"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="100"/>

	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/end_frq_unit" />

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/end_frq_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/end_frq"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="120"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/start_frq_unit"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/frq_interval_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/frq_interval"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="50"/>

	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/frq_interval_unit" />

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/frq_time_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/frq_time"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="2"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/frq_time_unit"/>
	</LinearLayout>
	 <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#828790"
        android:textColor="#fff"
        android:text="最佳偏置点"
        android:textSize="20sp"/>
	 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">

	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:gravity="center_vertical"
	         android:paddingRight="10dp"
	         android:text="@string/dianping_tv"
	         android:textSize="20sp" />

	    <EditText 
	        android:id="@+id/dianping"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="640"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/dianping_unit"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/enlarge_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/enlarge"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="512"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/enlarge_unit"/>
	</LinearLayout>
	<TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#828790"
        android:textColor="#fff"
        android:text="多次扫描设置"
        android:textSize="20sp"/>
	 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">

	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:gravity="center_vertical"
	         android:paddingRight="10dp"
	         android:text="@string/times_tv"
	         android:textSize="20sp" />

	    <EditText 
	        android:id="@+id/times"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="2"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/times_init"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/interval_time_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/interval_time"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/shape_textview"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="5"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/interval_time_unit"/>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center_horizontal"
	    android:layout_marginBottom="0dp">

	    <Button
	        android:id="@+id/confirm_set"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm_set" />

	    <Button
	        android:id="@+id/cancel_set"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel_set" />
	</LinearLayout>

</LinearLayout>